# rust-hash-wheel-timer

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml  test-features.sh
.github/workflows/: ci.yml
benches/: wheel_benchmark.rs
src/: lib.rs  simulation.rs  thread_timer.rs  timers.rs  uuid_extras.rs  wheels.rs
src/wheels/: byte_wheel.rs  cancellable.rs  mod.rs  quad_wheel.rs
